# bzaf

./: .gitignore  .gitreview  README.md  groups  plugin.spec  project.config  requirements.txt  setup.cfg  setup.py  tox.ini
bzaf/: __main__.py  cli.py  version.py
bzaf/api/: __init__.py  api_request.py  spec_validator.py  validator.py
bzaf/api/backends/: __init__.py  ansible.py  shell.py
bzaf/api/schemas/: ansible.py  bzaf.py  shell.py  step.py  verification_step.py
bzaf/api/utils/: exceptions.py
bzaf/api/v1/: executor.py  spec.py
bzaf/api/v1/backends/: ansible.py  shell.py
bzaf/api/v1/schemas/: steps.py  verification_steps.py
bzaf/utils/: bugzilla.py  exceptions.py  logger.py  summary.py
docs/: Makefile  requirements.txt
docs/source/: ansible_backend.rst  backends.rst  bzaf_microversions.rst  bzaf_spec.rst  conf.py  contribution.rst  cookbook.rst  design_philosophy.rst  developing_backends.rst  index.rst  installing.rst  quickstart.rst  roadmap.rst  shell_backend.rst  user_guide.rst  working_with_bzaf.rst
docs/source/_static/: example_backend.py  example_schema.py
infrared/: README.md  main.yml
infrared/tasks/: ci_job_id.yml  install.yml  run.yml
infrared/tasks/templates/: rpm_compare.j2
