[metadata]
name = bzaf
summary = Bugzilla Auto Verification Tool
description-file =
    README.md
author = 'Vadim Khitrin'
author-email = 'me@vkhitrin.com'
home-page = 'https://github.com/rhos-infra/bzaf/'
project_urls =
    Source Code = 'https://github.com/rhos-infra/bzaf/'
classifier =
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3

[files]
packages =
    bzaf

[entry_points]
console_scripts =
    bzaf = bzaf.cli:main
